Fix unclickable pullquote if alignleft or alignright is set

--- a/assets/css/ie-editor.css
+++ b/assets/css/ie-editor.css
@@ -1372,6 +1372,7 @@ p.has-background {
 	border-bottom-style: solid;
 	border-bottom-width: 3px;
 	color: #28303d;
+	position: relative;
 }
 
 .wp-block-pullquote::before {
