--- a/assets/css/style-editor.css
+++ b/assets/css/style-editor.css
@@ -1053,6 +1053,7 @@ p.has-background {
 	border-bottom-style: solid;
 	border-bottom-width: var(--pullquote--border-width);
 	color: var(--pullquote--color-foreground);
+	position: relative;
 }
 
 .wp-block-pullquote::before {
