--- a/style-rtl.css
+++ b/style-rtl.css
@@ -2401,6 +2401,7 @@ p.has-text-color a {
 	border-bottom-style: solid;
 	border-bottom-width: var(--pullquote--border-width);
 	color: var(--pullquote--color-foreground);
+	position: relative;
 	/**
 	 * Block Options
 	 */
